curlpod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: curl-pod
spec:
  containers:
  - name: curl-container
    image: curlimages/curl:latest
    command:
    - sleep
    - "3600"  # Sleep to keep the container running
