deployment2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: websrv-deploy
  labels:
    app: websrv
  namespace: test1
spec:
  replicas: 5
  selector:
    matchLabels:
      app: websrv
  template:
    metadata:
      labels:
        app: websrv
        app.kubernetes.io/name: websrv
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "150Mi"
          limits:
            memory: "300Mi"
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 3
          periodSeconds: 3
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10
