myweb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-deployment
  labels:
    app: webapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
        app.kubernetes.io/name: myweb
    spec:
      containers:
      - name: webapp
        image: nginx
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "300Mi"
          limits:
            memory: "1Gi"
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 60
          periodSeconds: 3
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 60
          periodSeconds: 10
        volumeMounts:
        - name: nginx-index-file
          mountPath: "/usr/share/nginx/html/"
      volumes:
      - name: nginx-index-file
        configMap:
          name: index-html-configmap
